# linera-proof

./: .gitignore  README.md  linera.toml  middleware.ts  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: attendee-portal.tsx  badge-portfolio.tsx  event-form.tsx  event-list.tsx  header.tsx  organizer-dashboard.tsx  qr-code-generator.tsx  qr-code-verifier.tsx  wallet-connector.tsx
contract/: Cargo.toml
contract/.cargo/: config.toml
contract/src/: abi.rs  contract.rs  lib.rs  service.rs  state.rs
lib/: config.ts  qr-utils.ts  wallet-context.tsx
lib/linera/: checko-adapter.ts  client-loader.ts  client.ts  hooks.ts  index.ts  types.ts
public/: linera-sdk-loader.js  test-sdk.html
public/linera-sdk/: init.js
scripts/: deploy-contract.sh  generate-claim-codes.js  setup-local-network.sh
