[package]
name = "event-badge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.7"
linera-sdk = { version = "0.15.6", features = ["wasmer"] }
linera-views = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3"
log = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.15.6", features = ["test"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "event-badge-contract"
path = "src/contract.rs"

[[bin]]
name = "event-badge-service"
path = "src/service.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
